# 40fy

./: .gitignore  Cargo.toml  README.md  index.html  output.css  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tailwind.config.js  tailwind.config.ts
src/: App.svelte  app.rs
src-tauri/: Cargo.toml  my_database.db  passwords.db  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src/components/: active_entry.rs  entry_list.rs  mod.rs  side_bar.rs  top_bar.rs
src/lib/: stores.js  stores.ts
src/lib/components/: ActiveEntry.svelte  DatabaseList.svelte  EntryList.svelte  SideBar.svelte  TopBar.svelte  VaultList.svelte
src/lib/components/icons/: CopyIcon.svelte
src/lib/components/modals/: AddEntryModal.svelte  AddVaultModal.svelte
src/lib/models/: Entry.ts
src/lib/pages/: Dashboard.svelte  HomePage.svelte  LoginPage.svelte
src/utils/: tauri_commands.rs
