[package]
name = "fortify"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0"
rusqlite = { version = "0.30.0", features = ["serde_json", "bundled-sqlcipher"] } # Check the latest version and adjust accordingly
serde = "1.0"
serde_derive = "1.0"
dirs = "5.0.1"
uuid = { version = "1.7.0", features = ["v4"] }
regex = "1.10.3"
bcrypt = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
